codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__effective_sampling_model_transition.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 656
expression: rendered
---
• Active model changed to gpt-5.4 high
